fixed menu on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body{
     -webkit-flex-wrap: wrap; /* NEW */
 	justify-content: space-between;
 	align-items: center;
-	z-index: 300000000000000000000000000000000000000000000000000;
+	z-index: 49999;
 	opacity: 1;
 	-webkit-transform: translate3d(0,0,0);
 }
